--- a/src/ProductList.css
+++ b/src/ProductList.css
@@ -12,6 +12,9 @@ body {
 
 /* Navbar */
 .navbar {
+    position: sticky;
+  top: 0;
+  z-index: 1000; /* keep it on top of other content */
     background-color: #4CAF50;
     color: #fff!important;
     padding: 15px;
